docs/pages/versions/v58.0.0/sdk/router/index.mdx
---
title: Router
sidebar_title: Overview
description: A file-based routing library for React Native and web applications.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-58/packages/expo-router'
packageName: 'expo-router'
platforms: ['android', 'ios', 'tvos', 'web', 'expo-go']
searchRank: 6
---

import { RouterLogo } from '@expo/styleguide';

import APISection from '~/components/plugins/APISection';
import { BoxLink } from '~/ui/components/BoxLink';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';

`expo-router` is a routing library for React Native and web apps. It enables navigation management using a file-based routing system and provides native navigation components.

<BoxLink
  title="Expo Router guides"
  description="Learn about Expo Router basics, navigation patterns, core concepts, and more."
  href="/router/introduction/"
  Icon={RouterLogo}
/>

> **Important** In **SDK 56 and later**, Expo Router no longer supports importing from external `@react-navigation/*` packages in application code. Repoint those imports to the matching `expo-router` entry points. Run the [codemod](/router/migrate/sdk-55-to-56#automated-migration) or follow the [SDK 55 to 56 migration guide](/router/migrate/sdk-55-to-56) to update your project.

## Installation

To use Expo Router in your project, you need to install. Follow the instructions from the Expo Router's installation guide:

<BoxLink
  title="Install Expo Router"
  description="Learn how to install Expo Router in your project."
  href="/router/installation/"
  Icon={RouterLogo}
/>

## Configuration in app config

If you are using the [default](/more/create-expo/#--template) template to create a new project, `expo-router`'s [config plugin](/config-plugins/introduction/) is already configured in your app config.

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": ["expo-router"]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'root',
      description:
        'Changes the routes directory from `app` to another value. Avoid using this property unless you have a specific need.',
      default: '"app"',
    },
    {
      name: 'origin',
      description:
        'Production origin URL where assets in the public folder are hosted. The fetch function is polyfilled to support relative requests from this origin in production. The development origin is inferred using the Expo CLI development server.',
      default: 'undefined',
    },
    {
      name: 'headOrigin',
      description:
        'A more specific origin URL used in the `expo-router/head` module for iOS handoff. Defaults to `origin`.',
      default: 'undefined',
    },
    {
      name: 'asyncRoutes',
      description:
        'Enable async routes (lazy loading). In SDK 58 and later, this is enabled by default on web in development and production, and disabled by default on native. Can be a boolean, a string (`"development"` or `"production"`), or an object with platform-specific values (`{ android, ios, web, default }`). Explicit platform values take precedence over `default`. Production async routes are web-only.',
      default: '{ web: true }',
      experimental: true,
    },
    {
      name: 'platformRoutes',
      description:
        'Enable or disable platform-specific routes (for example, **index.android.tsx** and **index.ios.tsx**).',
      default: 'true',
    },
    {
      name: 'sitemap',
      description: 'Enable or disable the automatically generated sitemap at **/_sitemap**.',
      default: 'true',
    },
    {
      name: 'partialRouteTypes',
      description:
        'Enable partial typed routes generation. This allows TypeScript to provide type checking for routes without requiring all routes to be statically known.',
      default: 'true',
    },
    {
      name: 'redirects',
      description:
        'An array of static redirect rules. Each rule should have `source`, `destination`, and optionally `permanent` (defaults to `false`) and `methods` (HTTP methods to redirect).',
      default: 'undefined',
    },
    {
      name: 'rewrites',
      description:
        'An array of static rewrite rules. Each rule should have `source`, `destination`, and optionally `methods` (HTTP methods to rewrite).',
      default: 'undefined',
    },
    {
      name: 'headers',
      description:
        'A list of headers that are set on every route response from the server. The value can be a string or an array of strings.',
      default: 'undefined',
    },
    {
      name: 'pageHeaders',
      description:
        "An array of header rules that are set on a specific page's response from the server. Each rule should have `source` and `headers`. Rules only apply to page responses, not API routes or data loaders.",
      default: 'undefined',
    },
    {
      name: 'disableSynchronousScreensUpdates',
      description:
        'Disable synchronous layout updates for native screens. This can help with performance in some cases.',
      default: 'false',
    },
    {
      name: 'unstable_useServerMiddleware',
      description:
        'No longer required as of SDK 58 and has no effect. Remove this option from your app config.',
      default: 'false',
      deprecated: true,
    },
    {
      name: 'unstable_useServerDataLoaders',
      description:
        'No longer required as of SDK 58 and has no effect. Remove this option from your app config.',
      default: 'false',
      deprecated: true,
    },
    {
      name: 'unstable_useServerRendering',
      description:
        'No longer required as of SDK 58 and has no effect. Remove this option from your app config.',
      default: 'false',
      deprecated: true,
    },
    {
      name: 'apiRoutes',
      description:
        'Enable API routes with static or server output. Defaults to `true` for server output and `false` for static output.',
      default: 'Depends on web.output',
    },
  ]}
/>

## Usage

For information core concepts, notation patterns, navigation layouts, and common navigation patterns, start with Router 101 section:

<BoxLink title="Router 101" Icon={RouterLogo} href="/router/basics/core-concepts/" />

## APIs

| API                        | Description                                     |
| -------------------------- | ----------------------------------------------- |
| [Stack](stack)             | Stack navigator, toolbar, and screen components |
| [Link](link)               | Link and Redirect components                    |
| [Color](color)             | Platform color utilities                        |
| [Native Tabs](native-tabs) | Native tab navigation                           |
| [Split View](split-view)   | Split view layout                               |
| [UI](ui)                   | Headless tab components                         |

## API

```js
import { useRouter, Tabs, Navigator, Slot } from 'expo-router';
```

<APISection packageName="expo-router" />
